--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "he": "^1.1.1",
     "react": "^16.4.1",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.4.1",
     "react-feather": "^1.1.1",
     "react-scripts": "1.1.4",
