--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-animations": "^1.0.0",
     "react-dom": "^16.4.1",
     "react-feather": "^1.1.1",
+    "react-loadable": "^5.4.0",
     "react-scripts": "1.1.4",
     "styled-components": "^3.3.3",
     "uuid": "^3.3.2"
