--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "react-feather": "^1.1.1",
     "react-loadable": "^5.4.0",
     "react-scripts": "^2.1.3",
-    "styled-components": "^3.3.3",
+    "styled-components": "^4.1.3",
     "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "lint": "standard",
     "eject": "react-scripts eject"
   },
   "main": "index.js",
@@ -27,5 +28,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {}
 }
