--- a/package.json
+++ b/package.json
@@ -29,5 +29,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "standard": "^12.0.1"
+  }
 }
