--- a/package.json
+++ b/package.json
@@ -3,15 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/he": "^1.1.0",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^10.12.24",
+    "@types/react": "^16.8.2",
+    "@types/react-dom": "^16.8.0",
+    "@types/react-loadable": "^5.5.0",
+    "@types/styled-components": "^4.1.8",
+    "@types/uuid": "^3.4.4",
     "axios": "^0.18.0",
     "he": "^1.1.1",
     "react": "^16.4.1",
     "react-animations": "^1.0.0",
     "react-dom": "^16.4.1",
-    "react-feather": "^1.1.1",
+    "react-feather": "^1.1.6",
     "react-loadable": "^5.4.0",
+    "react-pose": "^4.0.6",
     "react-scripts": "^2.1.3",
     "styled-components": "^4.1.3",
+    "styled-icons": "^6.12.0",
+    "typescript": "^3.3.3",
     "uuid": "^3.3.2"
   },
   "scripts": {
@@ -30,6 +41,14 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "standard": "^12.0.1"
+    "eslint-plugin-typescript": "^0.14.0",
+    "standard": "^12.0.1",
+    "typescript-eslint-parser": "^22.0.0"
+  },
+  "standard": {
+    "parser": "typescript-eslint-parser",
+    "plugins": [
+      "typescript"
+    ]
   }
 }
