--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,35 +1,55 @@
 {
   "name": "@react-quote/ui",
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
-  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@types/jest": "24.0.0",
-    "@types/node": "10.12.24",
-    "@types/react": "16.8.2",
-    "@types/react-dom": "16.8.0",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-pose": "^4.0.6",
-    "react-scripts": "2.1.3",
-    "styled-components": "^4.1.3",
-    "styled-icons": "^6.12.0",
-    "typescript": "3.3.3"
+  "version": "1.0.0",
+  "description": "",
+  "author": "c-kirkeby",
+  "license": "MIT",
+  "repository": "c-kirkeby/@react-quite/ui",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
+  "jsnext:main": "dist/index.es.js",
+  "engines": {
+    "node": ">=8",
+    "npm": ">=5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "cross-env CI=1 react-scripts-ts test --env=jsdom",
+    "test:watch": "react-scripts-ts test --env=jsdom",
+    "build": "rollup -c",
+    "start": "rollup -c -w",
+    "prepare": "yarn run build",
+    "predeploy": "cd example && yarn install && yarn run build",
+    "deploy": "gh-pages -d example/build"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "@types/styled-components": "^4.1.11",
+    "react-pose": "^4.0.7",
+    "styled-components": "^4.1.3",
+    "styled-icons": "^7.4.0"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
+  "peerDependencies": {
+    "prop-types": "^15.5.4"
+  },
+  "devDependencies": {
+    "@svgr/rollup": "^2.4.1",
+    "@types/react-dom": "^16.0.5",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0",
+    "cross-env": "^5.1.4",
+    "gh-pages": "^1.2.0",
+    "react-scripts-ts": "^2.16.0",
+    "rollup": "^0.62.0",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-postcss": "^1.6.2",
+    "rollup-plugin-typescript2": "^0.17.0",
+    "rollup-plugin-url": "^1.4.0",
+    "typescript": "^2.8.3"
+  },
+  "files": [
+    "dist"
   ]
 }
