--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-quote/ui": "0.1.0",
+    "@react-quote/ui": "*",
     "@types/he": "^1.1.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^10.12.24",
